pages/main/style.css
/* ... */
body {
  font-family: 'Roboto', sans-serif;
  line-height: 22px;
  overflow-x: hidden;
}
.container {
  width: 1600px;
  margin: 0 auto;
  overflow-x: hidden;
}
.wrapper {
  width: 1160px;
  margin: 0 auto;
}
h1 {
  font-size: 19px;
  line-height: 23px;
  font-weight: 400;
  text-align: center;
}
.nav a:hover {
  color: var(--hover_orange_btn);
}

.nav a:focus {
  color: var(--active_green);
}
.btn:hover,
.pets-arrows__btn:hover {
  background: var(--hover_orange_btn);
}
.social__icon:hover {
  background: var(--hover_orange_btn);
}
.social__link:hover .social__title {
  color: var(--hover_orange_btn);
}
.social__link:hover .social__icon {
  background: var(--hover_orange_btn);
}
.btn:focus,
.pets-arrows__btn:focus {
  background: var(--active_green);
}

.social__link:focus .social__icon {
  background: var(--active_green);
}
.social__link:focus .social__title {
  color: var(--active_green);
}

.btn:disabled,
.btn[disabled] {
  background: var(--gray);
}
input[type='email']:ivalid:focus {
  border: 1px solid var(--rad);
}
/*----- HEADER STYLES -----*/
header {
  background: var(--black);
  color: var(--white);
}
header .wrapper {
  display: flex;
  align-items: center;
  padding: 14px 0;
}
.logo {
  width: 82px;
  height: 52px;
  margin-right: 63px;
  border: 1px solid var(--white);
  padding: 3.55px 4.75px;

  position: relative;
}
.logo img {
  position: absolute;
  left: 13.23px;
  top: 24.64px;
}
.nav {
  display: flex;
  gap: 58px;
  font-weight: 500;

  color: var(--white);
}
.copyright {
  margin-left: auto;
  font-weight: 500;
}
nav a:focus {
  background: linear-gradient(113.96deg, #f9804b 1.49%, #fe9013 101.44%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
}
.active {
  background: linear-gradient(113.96deg, #f9804b 1.49%, #fe9013 101.44%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
}
.copyright a:hover {
  background: linear-gradient(113.96deg, #f9804b 1.49%, #fe9013 101.44%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
}
/*----- HERO STYLES -----*/
.hero {
  background-image: url('../../assets/images/panda.png');
  background-repeat: no-repeat;
  background-position: center -80px;
  background-size: cover;
  width: 100%;
  height: 780px;
}
.hero .wrapper {
  display: flex;
  justify-content: end;
}
.hero_content {
  width: 500.3px;
  text-align: center;
  position: absolute;
  margin-top: 86px;
}
.circle {
  width: 465px;
  height: 465px;
  background: var(--orange_grad);
  border-radius: 50%;
  margin-top: 12px;
  margin-right: 108.31px;
}
.hero p {
  text-transform: uppercase;
  color: var(--white);

  font-size: 106.5px;
  font-weight: 700;
  line-height: 80px;
}
.yellow {
  color: var(--yellow);
}
.btn {
  border: none;
  cursor: pointer;
  color: var(--white);
  background: var(--orange_grad);
  border-radius: 25px;

  text-transform: uppercase;
  font-family: 'Roboto', sans-serif;
  line-height: 22.4px;
  padding: 16px auto;
  width: 298px;
  height: 54px;
}
.hero-btn {
  margin-top: 60px;
}
/*----- BACKSTAGE STYLES -----*/
.backstage {
  position: relative;
}
.flex-two-col {
  display: flex;
  justify-content: start;
  gap: 87px;
  margin-left: 220px;
}
.backstage .container {
  /* position: relative; */
}
.backstage .wrapper {
  /* padding: 140px 0 180px; */
  padding: 60px 0 173px;
}
.backstage .plant {
  background: url('../../assets/images/backstage-plant.png');
  height: 605px;
  width: 293px;
  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
  background-repeat: no-repeat;
  margin-top: 12px;
  position: absolute;
  /* top: 12px; */
  top: -80px;
  right: -89px;
}

.backstage article {
  width: 465px;
  color: var(--black_blue);
}

.backstage .right-box img {
  position: absolute;
  top: 12px;
  right: 0;
}
.backstage h2 {
  font-size: 48px;
  line-height: 58px;
  font-weight: 400;
  margin-bottom: 20px;
}
.backstage h3 {
  font-size: 24px;
  line-height: 29px;
  font-weight: 400;

  margin: 54px 0 34px;
}
.backstage p {
  line-height: 21px;
}
/*----- PETS STYLES -----*/
.pets-container {
  background: url('../../assets/images/palm_foto.png') left 0 bottom no-repeat,
    url('../../assets/images/strelitzia.png') right 0 bottom no-repeat;
}
.pets-gallery {
  position: relative;
  /* margin-top: -7px; */
}
.pets-arrows {
  width: 1322px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: absolute;
  top: calc((100% - 62px) / 2);
  left: calc((100% - 1322px) / 2);
}
.pets-arrows__btn {
  border: none;
  background: var(--orange_grad);
  height: 62px;
  width: 62px;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
}
.pets-arrows__btn--right {
  transform: rotate(0.5turn);
}
.pets-gallery {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-column-gap: 30px;
  grid-row-gap: 20px;
}
.pets-card {
  cursor: pointer;
  height: 426px;
  width: 366px;
  background: var(--orange_grad_1);
  border-radius: 5px;
  padding: 1px;

  /* overflow: hidden; */
  position: relative;
}
.card-overlay {
  background: rgba(0, 0, 0, 0.3);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
  height: 374px;
  width: 366px;
  border-radius: 5px;
}
.pets-card:hover .card-overlay {
  opacity: 0.8;
  z-index: 2;
}
.pets-card:hover .pets-card__img {
  transform: scale(1.04);
  transition: 0.8s;
}
.pets-card:hover .pets-card__p {
  transform: scale(1.4);
  padding-left: 30px;
  position: relative;
  z-index: 3;
}
.pets-card:hover .pets-card__name,
.pets-card:hover .pets-card__location {
  transform: translateY(-250px);
  color: var(--white);
  transition: 0.8s;
  z-index: 99;
}
.pets-card__content {
  background: var(--white);
  border-radius: 5px;
  overflow: hidden;
}
.pets-card__img {
  position: relative;
  width: 366px;
  transition: transform 0.8s;
}
/* ... */

